# docs/swagger.yaml
@@ -617,6 +617,10 @@ paths:
       - application/json
       operationId: GetAllQuestions
       parameters:
+      - description: keyword
+        in: query
+        name: keyword
+        type: string
       - collectionFormat: csv
         description: includes
         in: query
